<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.waydrow.quiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:paddingBottom="16dp"
            android:textSize="20sp"
            android:textColor="#1c74c4"
            android:gravity="center"
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/name"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexChoice" />

        <RadioGroup
            android:id="@+id/sexGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoppingChoice" />

        <RadioGroup
            android:id="@+id/shoppingGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/buyNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyNow" />

            <RadioButton
                android:id="@+id/buyWait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyWait" />
        </RadioGroup>

        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payChoice" />

        <CheckBox
            android:id="@+id/crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Crash" />

        <CheckBox
            android:id="@+id/alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay" />

        <TextView
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice" />

        <EditText
            android:id="@+id/advice"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="120dp"

            android:gravity="top"
            android:hint="@string/pleaseInput"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>